LLM Constraint Exploration part

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="发现令人惊叹的目的地，创造难忘的回忆。我们为您提供最佳的旅行体验，让每一次旅程都成为美好的故事。">
     <meta name="keywords" content="旅游,旅行,度假,目的地,机票,酒店,行程规划">
   </head>
+  <!-- index.html -->
+<script src="https://webapi.amap.com/maps?v=2.0&key=fb4bd91cb9a48d50b19a6787aa081ec9"></script>
+
+  
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
